--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -1,4 +1,4 @@
 - name: Requests install
   pip:
     name: requests
-    executable: /usr/bin/pip3
+    executable: "{{ ansible_python_interpreter }}"
