--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -1,8 +1,6 @@
 - name: Get Python interpreter path
-  gather_facts: no
-  tasks:
-    - debug:
-        var: ansible_python_interpreter
+  debug:
+    var: ansible_python_interpreter
 
 - name: Requests install
   pip:
