--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: Install Python
+  become: yes
+  apt:
+    update_cache: yes
+    name: python3
+    state: present
 - name: Requests install
   pip:
     name: requests
