--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -2,7 +2,7 @@
   become: yes
   apt:
     update_cache: yes
-    name: python3
+    name: python3-pip
     state: present
 - name: Requests install
   pip:
