--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -1,10 +1,13 @@
-- name: Install Python
+- name: Install Python and pip
   become: yes
   apt:
     update_cache: yes
-    name: python3-pip
+    name: 
+      - python3
+      - python3-pip
     state: present
+
 - name: Requests install
   pip:
     name: requests
-    executable: python
+    executable: "{{ ansible_python_interpreter }}"
