--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -1,13 +1,16 @@
-- name: Install Python and pip
+- name: Install Python and pip, and install requests
   become: yes
-  apt:
-    update_cache: yes
-    name: 
-      - python3
-      - python3-pip
-    state: present
+  tasks:
+    - name: Install Python and pip
+      apt:
+        update_cache: yes
+        name: python3-pip
+        state: present
 
-- name: Requests install
-  pip:
-    name: requests
-    executable: "{{ ansible_python_interpreter }}"
+    - name: Gather facts
+      setup:
+
+    - name: Requests install
+      pip:
+        name: requests
+        executable: python
