--- a/roles/install_requests/tasks/main.yml
+++ b/roles/install_requests/tasks/main.yml
@@ -1,16 +1,5 @@
-- name: Install Python and pip, and install requests
+- name: Установка модуля requests для Python
   become: yes
-  block:
-    - name: Install Python and pip
-      apt:
-        update_cache: yes
-        name: python3-pip
-        state: present
-
-    - name: Gather facts
-      setup:
-
-    - name: Requests install
-      pip:
-        name: requests
-        executable: python
+  pip:
+    name: requests
+    executable: python3
