--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,29 +1,58 @@
-- name: Install Docker dependencies
-  apt:
-    name: 
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - gnupg
-      - software-properties-common
-    state: present
 
-- name: Add Docker GPG key
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-
-- name: Add Docker repository
-  apt_repository:
-    repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
-    state: present
-
-- name: Install Docker
-  apt:
-    name: docker-ce
-    state: present
-
-- name: Start Docker service
-  service:
-    name: docker
-    state: started
+    - name: "Install Docker"
+      block:
+        - name: Обновить список пакетов
+          apt:
+            update_cache: yes
+        - name: "Add Universe"
+          apt_repository:
+            repo: "deb http://us.archive.ubuntu.com/ubuntu/ {{ ansible_distribution_release }} universe"
+            state: present
+        - name: "Additional packages"
+          apt:
+            name:
+              - apt-transport-https
+              - ca-certificates
+              - curl
+              - gnupg
+              - lsb-release
+            update_cache: yes
+            cache_valid_time: 86400
+        - name: Add Docker keys
+          file:
+            path: /etc/apt/keyrings
+            state: directory
+            mode: '0755'
+        - name: Load Docker Key
+          get_url:
+            url: https://download.docker.com/linux/ubuntu/gpg
+            dest: /etc/apt/keyrings/docker.asc
+            mode: '0644'
+        - name: Установить права доступа для ключа Docker
+          file:
+            path: /etc/apt/keyrings/docker.asc
+            mode: '0644'
+        - name: Add repo
+          apt_repository:
+            repo: >
+              deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc]
+              https://download.docker.com/linux/ubuntu
+              {{ ansible_distribution_release }} stable
+            state: present
+            update_cache: yes
+            filename: docker
+        - name: Docker CE
+          apt:
+            name:
+            - docker-ce
+            - docker-ce-cli
+            - containerd.io
+            - docker-buildx-plugin
+            - docker-compose-plugin
+            update_cache: yes
+        - name: Docker Check
+          service:
+            name: docker
+            state: restarted
+            enabled: yes
+      become: yes
