--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,7 +1,7 @@
 
     - name: "Install Docker"
       block:
-        - name: Обновить список пакетов
+        - name: Update Package List
           apt:
             update_cache: yes
         - name: "Add Universe"
@@ -41,6 +41,7 @@
             state: present
             update_cache: yes
             filename: docker
+            ignore_keyring: yes
         - name: Docker CE
           apt:
             name:
