--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -34,10 +34,7 @@
             mode: '0644'
         - name: Add repo
           apt_repository:
-            repo: >
-              deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc]
-              https://download.docker.com/linux/ubuntu
-              {{ ansible_distribution_release }} stable
+            repo: deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
             state: present
             update_cache: yes
             filename: docker
