--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,55 +1,49 @@
+- name: Install Docker
+  become: yes
+  block:
+    - name: Update Package List
+      apt:
+        update_cache: yes
 
-    - name: "Install Docker"
-      block:
-        - name: Update Package List
-          apt:
-            update_cache: yes
-        - name: "Add Universe"
-          apt_repository:
-            repo: "deb http://us.archive.ubuntu.com/ubuntu/ {{ ansible_distribution_release }} universe"
-            state: present
-        - name: "Additional packages"
-          apt:
-            name:
-              - apt-transport-https
-              - ca-certificates
-              - curl
-              - gnupg
-              - lsb-release
-            update_cache: yes
-            cache_valid_time: 86400
-        - name: Add Docker keys
-          file:
-            path: /etc/apt/keyrings
-            state: directory
-            mode: '0755'
-        - name: Load Docker Key
-          get_url:
-            url: https://download.docker.com/linux/ubuntu/gpg
-            dest: /etc/apt/keyrings/docker.asc
-            mode: '0644'
-        - name: Установить права доступа для ключа Docker
-          file:
-            path: /etc/apt/keyrings/docker.asc
-            mode: '0644'
-        - name: Add repo
-          apt_repository:
-            repo: deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-            state: present
-            update_cache: yes
-            filename: docker
-        - name: Docker CE
-          apt:
-            name:
-            - docker-ce
-            - docker-ce-cli
-            - containerd.io
-            - docker-buildx-plugin
-            - docker-compose-plugin
-            update_cache: yes
-        - name: Docker Check
-          service:
-            name: docker
-            state: restarted
-            enabled: yes
-      become: yes
+    - name: Add Universe repository
+      apt_repository:
+        repo: "deb http://us.archive.ubuntu.com/ubuntu/ {{ ansible_distribution_release }} universe"
+        state: present
+
+    - name: Install additional packages
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
+        update_cache: yes
+        cache_valid_time: 86400
+
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker repository
+      apt_repository:
+        repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+        state: present
+        update_cache: yes
+
+    - name: Install Docker CE
+      apt:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+          - docker-buildx-plugin
+          - docker-compose-plugin
+        update_cache: yes
+
+    - name: Restart Docker service
+      service:
+        name: docker
+        state: restarted
+        enabled: yes
