--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -21,15 +21,34 @@
         update_cache: yes
         cache_valid_time: 86400
 
-    - name: Add Docker GPG key
-      apt_key:
+    - name: Create directory for Docker key
+      become: true
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: '0755'
+    
+    - name: Download Docker GPG key
+      become: true
+      get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-
-    - name: Add Docker repository
-      apt_repository:
-        repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
-        state: present
+        dest: /etc/apt/keyrings/docker.asc
+        mode: '0644'
+    
+    - name: Set permissions for Docker key
+      become: true
+      file:
+        path: /etc/apt/keyrings/docker.asc
+        mode: '0644'
+    
+    - name: Add Docker repository to Apt sources
+      become: true
+      shell: >
+        echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+    
+    - name: Update apt cache
+      become: true
+      apt:
         update_cache: yes
 
     - name: Install Docker CE
